--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,6 @@
 	<%= link_to 'sign out', destroy_user_session_path, method: :delete %>
 <% else %>
 	<%= link_to 'sign in', new_user_session_path %> | 
-	<%= link_to 'register', user_registration_path %>
+	<%= link_to 'register', new_user_registration_path %>
 <% end %>
 </div>
