--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Welcome, <%= current_user.email if current_user %> <%= 'Guest' if !current_user %> </h1> 
-
-<div class='pull-right'>
-<% if current_user %>
-	<%= link_to 'sign out', destroy_user_session_path, method: :delete %>
-<% else %>
-	<%= link_to 'sign in', new_user_session_path %> | 
-	<%= link_to 'register', new_user_registration_path %>
-<% end %>
+<div class="row">
+  <div class="container">
+    <h1>
+      Welcome, 
+      <small>
+        <%= current_user.email if current_user %> <%= 'Guest' if !current_user %> 
+      </small>
+    </h1> 
+  </div>
 </div>
