--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,11 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">Profile</a></li>
+          <li>
+            <% if current_user %>
+              <%= link_to "Change password", edit_user_password_path(@resource, reset_password_token: @token) %>
+            <% end %>
+          </li>
           <li class="divider"></li>
             <% if current_user %>
               <li>
