--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
               </li>
             <% else %>
               <li>
-                <%= link_to 'Sign in', new_user_session_path %>
+                <%= link_to 'Log in', new_user_session_path %>
               </li>
               <li>
                 <%= link_to 'Register', new_user_registration_path %>
