--- a/app/views/layouts/_flash_message.html.erb
+++ b/app/views/layouts/_flash_message.html.erb
@@ -1,19 +1,23 @@
-<% flash.each do |name, msg| %>
-	<% if name == :alert %>
-  <div class="alert alert-danger alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert">
-	  	<span aria-hidden="true">x</span>
-	  	<span class="sr-only">Close</span>
-  </button>
-  <%= msg %>
-	</div>
-  <% else %>
-  <div class="alert alert-success alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert">
-	  	<span aria-hidden="true">x</span>
-	  	<span class="sr-only">Close</span>
-  </button>
-  <%= msg %>
+<div class="container">
+  <div class="row">
+    <% flash.each do |name, msg| %>
+    	<% if name == :alert %>
+      <div class="alert alert-danger alert-dismissible" role="alert">
+    	  <button type="button" class="close" data-dismiss="alert">
+    	  	<span aria-hidden="true">x</span>
+    	  	<span class="sr-only">Close</span>
+      </button>
+      <%= msg %>
+    	</div>
+      <% else %>
+      <div class="alert alert-success alert-dismissible" role="alert">
+    	  <button type="button" class="close" data-dismiss="alert">
+    	  	<span aria-hidden="true">x</span>
+    	  	<span class="sr-only">Close</span>
+      </button>
+      <%= msg %>
+    </div>
+      <% end %>
+     <% end %>
+  </div>
 </div>
-  <% end %>
- <% end %>
