--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -23,12 +23,12 @@
 
         <div class="form-group">
           <%= f.label :start %>
-          <%= f.text_field :start , :class => "add-calender form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :end %>
-          <%= f.text_field :end , :class => "add-calender form-control" %>
+          <%= f.label :end ,:class => "pull-right"%>
+          <div class="input-daterange input-group">
+            <%= f.text_field :start , :class => "form-control dp-start-date", :value => Date.current.strftime("%d-%m-%Y") %>
+            <span class="input-group-addon">to</span>
+            <%= f.text_field :end , :class => "form-control dp-end-date" %>
+          </div>
         </div>
 
         <div class="actions">
