--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="container">
-    <% if @projects.any? %>
-      <h1>Listing projects <%= link_to 'New Project', new_project_path , :class => "btn btn-primary pull-right"%></h1>
+    <h1>Listing projects <%= link_to 'New Project', new_project_path , :class => "btn btn-primary pull-right"%></h1>
+    <% if @projects.any? %>   
       <% @projects.each do |project| %>
         <div class="panel panel-default col-md-4">
           <div class="panel-heading">
@@ -21,6 +21,10 @@
         </div>
       <% end %>
       <br>
+    <% else %>
+      <div class="row">
+        <p class="text-warning">Sorry, no projects to show</p>
+      </div>
     <% end %>  
   </div>
 </div>
