--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,7 +11,24 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :name  %> 
+    <%= f.text_field :name , :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :start %>
+    <%= f.label :end ,:class => "pull-right"%>
+    <div class="input-daterange input-group">
+      <%= f.text_field :start , :class => "form-control dp-start-date", :value => Date.current.strftime("%d-%m-%Y") %>
+      <span class="input-group-addon">to</span>
+      <%= f.text_field :end , :class => "form-control dp-end-date" %>
+    </div>
+  </div>
+
+  <div>
+    <%= f.submit "Submit", :class => "btn btn-primary" %>
   </div>
 <% end %>
+
+
