--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing story</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @story %> |
-<%= link_to 'Back', stories_path %>
+<div class="row">
+  <div class="container">
+    <div class="col-md-4 col-md-offset-4">
+      <h1>Editing story</h1>
+        <%= render 'form' %>
+    </div>
+</div>
+</div>
