--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -2,27 +2,7 @@
   <div class="container">
     <div class="col-md-4 col-md-offset-4">
       <h3 class="text-center text-info">New story</h3>
-
-      <%= form_for(@story, url: project_stories_path) do |f|%>
-      
-      <div class="form-group">    
-        <%= f.label :name %> 
-        <%= f.text_field :name, :class => "form-control" %>
-      </div>
-
-
-      <div class="form-group">    
-        <%= f.label :description  %> 
-        <%= f.text_area :description ,:class => "form-control" %>
-      </div>
-
-      <div class="form-group">    
-        <%= f.label :due_date %> 
-        <%= f.text_field :due_date,:class => "form-control" %>
-      </div>
-
-      <%= f.submit "Add Story", class: "btn btn-primary" %>
-      <% end %>
+        <%= render 'form' %>
     </div>
   </div>
 </div>
