--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Editing project</h1>
-
-<%= render 'form' %>
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', project_path() %>
+<div class="row">
+  <div class="container">
+    <div class="col-md-4 col-md-offset-4">
+      <h1 class="text-info">Edit project</h1>
+        <%= render 'form'%>
+        <%= link_to 'Show', @project %> |
+		<%= link_to 'Back', project_path() %>
+    </div>
+  </div>
+</div>
