--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -16,15 +16,21 @@
     <%= f.text_field :name, :class => "form-control" %>
   </div>
 
-
   <div class="form-group">    
     <%= f.label :description  %> 
     <%= f.text_area :description ,:class => "form-control" %>
   </div>
 
-  <div class="form-group">    
-    <%= f.label :due_date %> 
-    <%= f.text_field :due_date,:class => "form-control" %>
+  <div class="form-group">
+    <%= f.label :due_date %>
+    <div class="input-group date">
+      <% if @story.due_date %>
+        <%= f.text_field :due_date , :class => "form-control", :value => @story.due_date.strftime("%d-%m-%Y"), :placeholder => "dd-mm-yyyy" %>
+      <% else %>
+        <%= f.text_field :due_date , :class => "form-control dp-end-date", :placeholder => "dd-mm-yyyy" %>
+      <% end %>
+      <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+    </div> 
   </div>
 
   <%= f.submit "Create", class: "btn btn-primary" %>
