--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@task) do |f| %>
+<%= form_for([@project, @story, @task]) do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,6 +11,20 @@
     </div>
   <% end %>
 
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name,:class=>"form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :due_date %>
+    <%= f.text_field :due_date ,:class=>"form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :estimated_time %>
+    <%= f.text_field :estimated_time ,:class=>"form-control" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
