--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,23 +1,16 @@
-<h1>Listing tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
+  <div class="container">
+    <h1>Listing tasks <%= link_to 'New Task', new_project_story_task_path, :class=>"btn btn-primary pull-right" %></h1>
     <% @tasks.each do |task| %>
-      <tr>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <%= task.name %>
+            <%= link_to 'Edit', edit_project_story_task_path(project_id: task.project_id, story_id: task.story_id,id: task.id), :class => "btn btn-warning" %>
+            <%= link_to 'Destroy', project_story_task_path(project_id: task.project_id,story_id: task.story_id,id: task.id), method: :delete, :class => "btn btn-danger",data: { confirm: 'Are you sure?' } %>
+          </div>
+        </div>
+      </div>      
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
+  </div>
+</div>
