--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="container">
     <div class="page-header">
-      <h1>Project list</h1>
-    </div>  
+      <h1>Projects</h1>
+    </div>
     <div class="menubar">
       <div class="container">
-        <%= link_to 'New Project', new_project_path , :class => "btn btn-primary pull-right"%>
+        <%= link_to 'Add', new_project_path , :class => "btn btn-primary pull-right"%>
       </div>
     </div>
     <div class="clearfix"></div>
