--- a/app/views/comments/_bug_comment.html.erb
+++ b/app/views/comments/_bug_comment.html.erb
@@ -1,5 +1,4 @@
-<% @owner = Story.find(params[:story_id]) if params[:story_id] %>
-<% @owner = Bug.find(params[:bug_id]) if params[:bug_id] %>
+<% @owner = Bug.find(bug_id) if bug_id %>
 <%= form_for(Comment.new) do |f| %>
   <div class="form-group">
     <%= f.label :content  %>
