--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,11 +12,38 @@
 }
 
 .story .progress {
-	height: 5px;
+	height: 8px;
 	border-radius: 0px;
 	background-color: #d9534f;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
 }
 .story .text-info {
 	display: inline;
+}
+.story .state {
+
+}
+.story .label.state-not-started {
+	background-color: #aaa;
+	border-color: #333;
+}
+.story .label.state-in-progress,
+.story .label.state-code-review,
+.story .label.state-testing,
+.story .label.state-reworking {
+	background-color: #ec971f;
+	border-color: #d58512;
+}
+.story .label.state-deploy,
+.story .label.state-delivered {
+	background-color: #5cb85c;
+	border-color: #4cae4c;
+}
+.story .label.state-accepted {
+	background-color: #337ab7;
+	border-color: #2e6da4;
+}
+.story .label.state-rejected {
+	background-color: #c9302c;
+	border-color: #ac2925;
 }
