--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,14 +18,22 @@
 
   <div class="form-group">
     <%= f.label :due_date %>
-    <%= f.text_field :due_date ,:class=>"form-control" %>
+    <div class="input-group date">
+      <% if @task.due_date %>
+        <%= f.text_field :due_date , :class => "form-control", :value => @task.due_date.strftime("%d-%m-%Y"), :placeholder => "dd-mm-yyyy" %>
+      <% else %>
+        <%= f.text_field :due_date , :class => "form-control", :placeholder => "dd-mm-yyyy" %>
+      <% end %>
+      <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+    </div> 
   </div>
 
   <div class="form-group">
     <%= f.label :estimated_time %>
     <%= f.text_field :estimated_time ,:class=>"form-control" %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit", :class => "btn btn-primary"%>
   </div>
 <% end %>
