--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
   <div class="container">
-    <h1>Editing task</h1>
-    <%= render 'form' %>
+    <div class="col-md-4 col-md-offset-4">
+      <h3 class="text-center text-info">Edit task</h3>
+        <%= render 'form' %>
+    </div>
   </div>
 </div>
-
 
 
