--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New task</h1>
-
-<%= render 'form' %>
-
+<div class="row">
+  <div class="container">
+    <div class="col-md-4 col-md-offset-4">
+      <h3 class="text-center text-info">New Task</h3>
+        <%= render 'form' %>
+    </div>
+  </div>
+</div>
