--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,9 +19,9 @@
                   <%= link_to story.name.capitalize, project_story_tasks_path(story_id: story.id,project_id: story.project_id) %>
                   <%= link_to "Edit", edit_project_story_path(project_id: story.project_id, id: story.id),class: "btn btn-warning" %>
                 </div>
-                Completed <span class="badge">10</span>
-                Pending <span class="badge">5</span>
-                In Progress <span class="badge">4</span>
+                Completed <span class="badge"><%= story.tasks.where(state: 'Done').count %></span>
+                Pending <span class="badge"><%= story.tasks.where(state: 'Not Started').count %></span>
+                In Progress <span class="badge"><%= story.tasks.where(state: 'In Progress').count %></span>
                 <div class="pull-right">
                   <span class="label label-default">Due Date: <%= story.due_date.strftime("%d-%m-%Y") %></span>
                 </div>
