--- a/app/views/public_activity/comment/_create.html.erb
+++ b/app/views/public_activity/comment/_create.html.erb
@@ -1,13 +1,13 @@
 <% if activity.trackable %> 
 	<% if activity.trackable.owner_type == 'Story' %>
-  	<%= link_to  project_story_path(id:  activity.trackable.owner_id, project_id: activity.trackable.owner.project.id)  do %> 
+  	<%= link_to  project_story_tasks_path(project_id: activity.trackable.owner.project_id, story_id: activity.trackable.owner_id)  do %> 
 		<span class="activity-owner"><%=activity.owner.email%></span> created a new comment
 	on story - <%= activity.trackable.owner.name %>.
 		<% end %>
 	<% else %>
-		 <%= link_to  project_story_path(id:  activity.trackable.owner.story.id, project_id: activity.trackable.owner.story.project.id)  do %> 
+		 <%= link_to  project_story_tasks_path(project_id:  activity.trackable.owner.story.project_id, story_id: activity.trackable.owner.story_id)  do %> 
 		<span class="activity-owner"><%=activity.owner.email%></span> created a new comment
-	on bug - <%= activity.trackable.owner.desc %>.
+	on bug - <%= activity.trackable.owner.content %>.
 		 <% end %>			
 	<% end %>
 <% else %>
