--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -43,7 +43,7 @@
       <% @project.uploads.each do |upload| %>
       <%= upload.name %> |
       <%= link_to upload.link_url do %> 
-        <button class="btn btn-danger">download the upload</button><br>
+        <button class="btn btn-danger">download</button><br>
       <% end %><br>
       <% end %>
     <% end %>
