--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,7 +15,7 @@
       </h3>
     </div>
 
-    <div class="row">
+    <div class="row story">
       <h4>Backlogs</h4>
       <% if @project.backlog_stories.any? %>
         <% @project.backlog_stories.each do |story| %>
@@ -58,9 +58,9 @@
               </div>
             </div>
             <div class="progress">
-              <div class="progress-bar progress-bar-success" data-toggle="tooltip" title="10" style="width: 35%"></div>
-              <div class="progress-bar progress-bar-warning" data-toggle="tooltip" title="5" style="width: 20%"></div>
-              <div class="progress-bar progress-bar-danger" data-toggle="tooltip" title="4" style="width: 45%"></div>
+              <div class="progress-bar progress-bar-success" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Done').count %>" style="width: 35%"></div>
+              <div class="progress-bar progress-bar-warning" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Not Started').count %>" style="width: 20%"></div>
+              <div class="progress-bar progress-bar-danger" data-toggle="tooltip" title="<%= story.tasks.where(state: 'In Progress').count %>" style="width: 45%"></div>
             </div>
             <div class="panel-body"></div>
           </div>
