--- a/app/views/projects/_story.html.erb
+++ b/app/views/projects/_story.html.erb
@@ -16,10 +16,10 @@
     </div>
   </div>
   <div class="progress">
-    <% progress, current = story.progress %>
-    <div class="progress-bar progress-bar-success" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Done').count %>" style="width: <%= progress %>%"></div>
-    <div class="progress-bar progress-bar-warning" data-toggle="tooltip" title="<%= story.tasks.where(state: 'In Progress').count %>" style="width: <%= current %>%"></div>
-    <div class="progress-bar progress-bar-danger" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Not Started').count %>" style="width: <%= 100-progress-current%>%"></div>
+    <% done, current, total= story.progress %>
+    <div class="progress-bar progress-bar-success" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Done').count %> tasks, <%= done %> hrs" style="width: <%= done/total*100 %>%"></div>
+    <div class="progress-bar progress-bar-warning" data-toggle="tooltip" title="<%= story.tasks.where(state: 'In Progress').count %> tasks, <%= current %> hrs" style="width: <%= current/total*100 %>%"></div>
+    <div class="progress-bar progress-bar-danger" data-toggle="tooltip" title="<%= story.tasks.where(state: 'Not Started').count %> tasks, <%= total-current-done %> hrs" style="width: <%= (total-current-done)/total*100 %>%"></div>
   </div>
   <div class="panel-body"></div>
 </div>
