--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,14 @@
   </div>
   <div class="container-fluid"> 
   <ul class="nav navbar-nav navbar-right">
+  <% if current_user %>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Notifications <b class="caret"></b></a>
+        <%= render 'layouts/notifications' %>
+      </li>
+  <% end %>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.nil? ? "Guest" :current_user.email %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li>
             <% if current_user %>
