--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -1,13 +1,13 @@
 <ul class="dropdown-menu">
 <% if current_user.unseen_notifs.any? %>
-	<% current_user.unseen_notifs.limit(5).each do |notif| %>
-		<%= render_activity notif.get_activity %>
+	<% current_user.unseen_notifs.limit(10).each do |notif| %>
+		<li class="notif-link"><%= render_activity notif.get_activity %></li>
 	<% end %>
 <% else %>
 	<li><a href="#">No new notifications..</a></li>
 <% end %>
 <li class="divider"></li>
 <li>
-	<a href="/notifications">See all notifications</a>
+	<a href="/notifications" style="color: green;">See all</a>
 </li>
 </ul>
