--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,23 +1,15 @@
-<h1>Listing notifications</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @notifications.each do |notification| %>
-      <tr>
-        <td><%= link_to 'Show', notification %></td>
-        <td><%= link_to 'Edit', edit_notification_path(notification) %></td>
-        <td><%= link_to 'Destroy', notification, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Notification', new_notification_path %>
+<div class="container">
+<div class="pageheader">
+  <h1>Listing notifications</h1>
+  <%= link_to "Clear All" ,clear_all_path, remote: true, class: 'btn btn-danger' %>
+</div>
+<% if current_user.unseen_notifs.any? %>
+  <ul>
+  <% current_user.unseen_notifs.each do |notif| %>
+    <li class="notif-link"><%= render_activity notif.get_activity %></li>
+  <% end %>
+  </ul>
+<% else %>
+  <p>No new notifications..</p>
+<% end %>
+</div>
