--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
   <div class="container-fluid"> 
   <ul class="nav navbar-nav navbar-right">
   <% if current_user %>
+    <li><%= link_to "Analytics", analytics_path %></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Notifications <b class="caret"></b></a>
         <%= render 'layouts/notifications' %>
