--- a/app/views/projects/completedstories.html.erb
+++ b/app/views/projects/completedstories.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="container">
     <% if @stories.any? %>
-      <h3>Completed Stories</h3>
+      <h3>Delivered Stories</h3>
       <% @stories.each do |story| %>
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -21,11 +21,11 @@
         </div>
       <% end %>
     <% else %>
-      <p>No completed stories yet!</p>
+      <p>No Delivered stories yet!</p>
     <% end %>
     <div class="row">
       <% if @delivered_stories.any? %>
-      <h3>Delivered Stories</h3>
+      <h3>Accepted Stories</h3>
       <% @delivered_stories.each do |story| %>
         <div class="panel panel-default">
           <div class="panel-heading">
