--- a/app/views/home/analytics.html.erb
+++ b/app/views/home/analytics.html.erb
@@ -7,8 +7,8 @@
           <%= text_field_tag(:tag,nil,{class: "form-control"}) %>
         </div>
         <div class="form-group">
-          <%= label_tag(:tag, "Add tag:") %>
-          <%= text_field_tag(:tag,nil,{class: "form-control"}) %>
+          <%= label_tag(:duration, "Hours:") %>
+          <%= number_field_tag(:duration,nil,{class: "form-control"}) %>
         </div>
         <%= submit_tag("Add" , class: "btn btn-primary") %>
       <% end %>
