--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,6 +1,10 @@
-<h1>Activities</h1><br />
+<div class="container">
+<div class="page-header">
+<h1>Activities</h1>	
+</div>
 <% @activities.each do |activity| %>
   <% if activity.owner.email? %>
     <%= render_activity activity %>
-  <% end %><br /><br />
+  <% end %>
 <% end %>
+</div>
